--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ANONYMOUS\\MSSQLSERVER01;Database=TestTest;Trusted_Connection=True;"
+    "DefaultConnection": "Server=ANONYMOUS\\MSSQLSERVER01;Database=TT;Trusted_Connection=True;"
   }
 }
