Add JWT autorization and JWT swagger support

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ANONYMOUS\\MSSQLSERVER01;Database=TT;Trusted_Connection=True;"
+    "DefaultConnection": "Server=ANONYMOUS\\MSSQLSERVER01;Database=TestBase;Trusted_Connection=True;"
+  },
+  "JwtToken": {
+    "SecretKey": "BulletinBoardAPIToken",
+    "Issuer": "https://localhost:44378"
   }
 }
