Add Identity AAA and Identity JWT support

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,7 @@
   },
   "JwtToken": {
     "SecretKey": "BulletinBoardAPIToken",
-    "Issuer": "https://localhost:44378"
+    "Issuer": "https://localhost:44378",
+    "Audience": "http://localhost:4200"
   }
 }
