--- a/appsettings.json
+++ b/appsettings.json
@@ -14,5 +14,6 @@
     "SecretKey": "BulletinBoardAPIToken",
     "Issuer": "https://localhost:44378",
     "Audience": "http://localhost:4200"
-  }
+  },
+  "AdminRegistrationKeyMD5Hash": "dbccb2535aae2ad1cce274459d06d4d3"
 }
