--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ANONYMOUS\\MSSQLSERVER01;Database=TestBase;Trusted_Connection=True;"
+    "DefaultConnection": "ConnectionString"
   },
   "JwtToken": {
     "SecretKey": "BulletinBoardAPIToken",
