--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,5 @@
     "Issuer": "https://localhost:44378",
     "Audience": "http://localhost:4200"
   },
-  "AdminRegistrationKeyMD5Hash": "c4995ea09caa01870cf00569a43336cb"
+  "AdminRegistrationKeyMD5Hash": "MD5Hash"
 }
