--- a/appsettings.json
+++ b/appsettings.json
@@ -8,12 +8,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ANONYMOUS\\MSSQLSERVER01;Database=TestBase;Trusted_Connection=True;"
+    "DefaultConnection": "ConnectionString"
   },
   "JwtToken": {
     "SecretKey": "BulletinBoardAPIToken",
     "Issuer": "https://localhost:44378",
     "Audience": "http://localhost:4200"
   },
-  "AdminRegistrationKeyMD5Hash": "c4995ea09caa01870cf00569a43336cb"
+  "AdminRegistrationKeyMD5Hash": "MD5Hash"
 }
