--- a/BulletinBoardAPI.csproj
+++ b/BulletinBoardAPI.csproj
@@ -27,4 +27,6 @@
     <Folder Include="DTO\AdManager\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
