--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <ProjectReference Include="..\Data\Data.csproj"/>
   </ItemGroup>
 
   <ItemGroup>
