--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -15,5 +15,6 @@
     "Issuer": "https://localhost:44378",
     "Audience": "http://localhost:4200"
   },
-  "AdminRegistrationKeyMD5Hash": "dbccb2535aae2ad1cce274459d06d4d3"
+  "AdminRegistrationKeyMD5Hash": "dbccb2535aae2ad1cce274459d06d4d3",
+  "MaxUserAds" : "1" 
 }
