Update default settings

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -8,13 +8,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ANONYMOUS\\MSSQLSERVER01;Database=TestBase;Trusted_Connection=True;"
+    "DefaultConnection": "ConnectionString"
   },
   "JwtToken": {
     "SecretKey": "BulletinBoardAPIToken",
     "Issuer": "https://localhost:44378",
     "Audience": "http://localhost:4200"
   },
-  "AdminRegistrationKeyMD5Hash": "dbccb2535aae2ad1cce274459d06d4d3",
+  "AdminRegistrationKeyMD5Hash": "MD5Hash",
   "MaxUserAds" : "4" 
 }
